--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "rdr",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Redirect traffic addressed to any host at any port to any IP and port.",
+  "os": ["darwin"],
   "bin": "./rdr",
   "main": "./rdr",
   "repository": {
