--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rdr",
   "version": "0.2.0",
   "description": "Redirect traffic addressed to any host at any port to any IP and port.",
-  "os": ["darwin"],
+  "os": ["darwin, linux"],
   "bin": "./rdr",
   "main": "./rdr",
   "repository": {
