--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rdr",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Redirect traffic addressed to any host at any port to any IP and port.",
-  "os": ["darwin, linux"],
+  "os": ["darwin", "linux"],
   "bin": "./rdr",
   "main": "./rdr",
   "repository": {
